--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
-    "expres": "^0.0.5"
+    "expres": "^0.0.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
   }
 }
